cw/cw-api-gateway-deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: cw-api-gateway
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: cw-api-gateway
    spec:
      nodeSelector: 
       cw-node: microservice
      containers:
      - name: cw-api-gateway
        image: gateway:test
        ports:
        - containerPort: 8000
          hostPort: 8000
      imagePullSecrets:
      - name: docker-registry-key-jiaofuyun-1
