cw/wechat-msgpush.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wechat-msgpush
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wechat-msgpush
    spec:
      nodeSelector: 
       cw-node: microservice
      containers:
      - name: wechat-msgpush
        image: cw-wechat-msgpush:test
        ports:
        - containerPort: 8837
