cw/cw-api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cw-api-gateway
spec:
  selector:
    app: cw-api-gateway
  ports:
    - name: main
      protocol: TCP
      port: 8080
      targetPort: 8000
