cw/cw-api-gateway-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cw-api-gateway
spec:
  rules:
  - host: xxxxxx
    http:
      paths:
      - backend:
          serviceName: cw-api-gateway
          servicePort: 8080
